5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1637_2446.log
== SUBMITION (2019-04-15 19:53:04) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//100000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)!=0):
	print("senha invalida)
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.18338
-- ERROR:
  File "/home/codebench/codes/1637/2446/main.py", line 9
    print("senha invalida)
                         ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:07) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//100000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)!=0):
	print("senha invalida)
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 9
    print("senha invalida)
                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:53:19) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//100000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)!=0):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.138136
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:21) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//100000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)!=0):
	print("senha invalida")
else:
	print("acesso liberado")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:53:49) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)!=0):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.21027
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
